--- a/src/app/add-details/add-details.component.css
+++ b/src/app/add-details/add-details.component.css
@@ -81,7 +81,7 @@ agm-map {
 
 
 .price {
-  margin-top: 140px;
+  margin-top: 100px;
   height: 50px;
 }
 
@@ -100,6 +100,8 @@ agm-map {
 .expansion__panel__content {
   display: flex;
   justify-content: space-around;
+  flex-flow: row wrap;
+  align-items: flex-start !important;
 }
 
 .expansion__panel__content__logged {
