--- a/src/app/auth/signin/signin.component.html
+++ b/src/app/auth/signin/signin.component.html
@@ -2,7 +2,7 @@
   <div class="row">
     <div class="col-md-4 col-sm-4 col-xs-12"></div>
     <div class="col-md-4 col-sm-4 col-xs-12">
-      <h2>Login</h2>
+      <h2>Login</h2><span *ngIf="isLoginError" class="help-block">Email-ul sau parola gresite</span>
       <form id="loginForm" role="form" (ngSubmit)="onLogin(f)" #f="ngForm" autocomplete="off" >
         <div class="form-group">
           <label for="username">E-mail Utilizator: </label>
