--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -14,7 +14,8 @@
       userService.rentCheckbox: userService.saleCheckbox : 'adType' : userService.surfaceMin : userService.surfaceMax : 'surface' :
       userService.areaSurfaceMin : userService.areaSurfaceMax : 'areaSurface' : userService.roomsMin : userService.roomsMax : 'rooms' :
       userService.partitioning: 'partitioning' : userService.yearBuiltMin : userService.yearBuiltMax : 'yearBuilt' : userService.comfort : 'comfort' :
-      userService.floorLevelMin : userService.floorLevelMax : 'floorLevel' : userService.furnished : 'furnished'
+      userService.floorLevelMin : userService.floorLevelMax : 'floorLevel' : userService.furnished : 'furnished' :
+      userService.searchLat : userService.searchLng
       | paginate: {itemsPerPage: userService.itemsOnPage, currentPage: userService.page}; let i = index">
         <mat-card class="card__class">
           <mat-card-header>
@@ -23,7 +24,10 @@
             <img src="../../assets/casa.jpg" *ngIf="ad.adItemType == 'Casa'" mat-card-avatar>
             <img src="../../assets/bloc.jpg" *ngIf="ad.adItemType == 'Apartament'" mat-card-avatar>
           </mat-card-header>
-          <mat-card-content>Pret: {{ ad.price }} <span class="fa fa-euro"></span></mat-card-content>
+          <mat-card-content>
+            <p>Pret: {{ ad.price }} <span class="fa fa-euro"></span></p>
+            <p>{{ad.location}}</p>
+          </mat-card-content>
           <img mat-card-image height="300px"  [src]="ad.image">
           <mat-card-actions class="viewAddButton">
             <button mat-raised-button mat-button color="primary" (click)="viewAdDetails(ad)">Vizualizeaza Anunt</button>
