--- a/src/app/user-list/user-list.component.html
+++ b/src/app/user-list/user-list.component.html
@@ -1,5 +1,15 @@
-<h2>User list</h2>
-
-<div *ngFor="let user of users">
-  {{user.username}}
+<h2 class="title">Users</h2>
+<div *ngFor="let user of users" class="description__container">
+  <mat-accordion>
+    <mat-expansion-panel>
+      <mat-expansion-panel-header>
+        <mat-panel-title>
+          Informatii User
+        </mat-panel-title>
+        <mat-panel-description>
+          Date despre user
+        </mat-panel-description>
+      </mat-expansion-panel-header>
+    </mat-expansion-panel>
+  </mat-accordion>
 </div>
