--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,4 +1,8 @@
-<nav class="navbar navbar-expand-sm bg-primary navbar-dark">
+<nav class="navbar navbar-expand-md bg-primary navbar-dark fixed-top">
+  <button class="navbar-toggler" data-toggle="collapse" data-target="#collapse_target">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse" id="collapse_target">
   <!-- Brand -->
   <a class="navbar-brand" href="#">Logo</a>
 
@@ -18,8 +22,10 @@
       </a>
     </li>
     <li class="nav-item">
-      <button class="btn btn-warning" type="button" *ngIf="userService.currentUser.token && userService.currentUser.type === 'ADMIN'"
-              >Statistici</button>
+      <a routerLink="/statistics">
+        <button class="btn btn-warning" type="button" *ngIf="userService.currentUser.token && userService.currentUser.type === 'ADMIN'"
+                >Statistici</button>
+      </a>
     </li>
   </ul>
   <ul class="navbar-nav ml-auto">
@@ -53,7 +59,7 @@
             <button class="btn btn-outline-warning" type="button" (click)="logout()">Sign Out</button>
           </div>
       </li>
-
   </ul>
+  </div>
 </nav>
 <br>
