--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,4 +1,5 @@
 <ng4-loading-spinner></ng4-loading-spinner>
+<ng-snotify></ng-snotify>
 <div class="body__container">
 <form>
   <mat-form-field>
@@ -31,6 +32,8 @@
           <img mat-card-image height="300px"  [src]="ad.image">
           <mat-card-actions class="viewAddButton">
             <button mat-raised-button mat-button color="primary" (click)="viewAdDetails(ad)">Vizualizeaza Anunt</button>
+            <button *ngIf="userService.currentUser.type === 'ADMIN'"
+                    mat-raised-button mat-button color="warn" (click)="deleteAd(ad)">Sterge Anunt!</button>
           </mat-card-actions>
         </mat-card><br>
       </div>
