--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -4,7 +4,7 @@
   </button>
   <div class="collapse navbar-collapse" id="collapse_target">
   <!-- Brand -->
-  <a class="navbar-brand" href="#">Logo</a>
+  <a class="navbar-brand" href="#">Homefinder</a>
 
   <!-- Links -->
   <ul class="navbar-nav">
