--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -9,7 +9,7 @@
         <mat-icon matSuffix class="search__icon">mode_search</mat-icon>
       </mat-form-field>
     </form>
-    <p><button mat-raised-button mat-button (click)="userService.sidenav.toggle()" class="filter__button">Filtreaza Cautarea</button></p>
+    <p><button mat-raised-button mat-button (click)="userService.sidenav.toggle()" class="filter__button">Filtreaza anunturi</button></p>
   </div>
   <hr class="options">
     <div class="custom__container">
