--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,15 +1,15 @@
 <ng4-loading-spinner></ng4-loading-spinner>
 <ng-snotify></ng-snotify>
-<h1 class="ads__title">Anunturi: </h1>
+<h1 class="ads__title">Anun&#539;uri </h1>
 <div class="body__container">
   <div class="search__filter__container">
     <form>
       <mat-form-field class="search__field">
-        <input type="text" name="search" matInput placeholder="Cauta Anunt..." [(ngModel)]="userService.term" autocomplete="off">
+        <input type="text" name="search" matInput placeholder="Caut&#259; anun&#539;..." [(ngModel)]="userService.term" autocomplete="off">
         <mat-icon matSuffix class="search__icon">mode_search</mat-icon>
       </mat-form-field>
     </form>
-    <p><button mat-raised-button mat-button (click)="userService.sidenav.toggle()" class="filter__button">Filtreaza anunturi</button></p>
+    <p><button mat-raised-button mat-button (click)="userService.sidenav.toggle()" class="filter__button">Filtreaz&#259; anun&#539;uri</button></p>
   </div>
   <hr class="options">
     <div class="custom__container">
