--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,87 +1,105 @@
 <mat-sidenav-container class="example-container" fullscreen>
 <mat-sidenav #sidenav class="sidenav">
-  <p><button mat-button (click)="sidenav.toggle()">Inchide</button></p>
-  <p><button mat-button (click)="resetFilters()">Reseteaza Filtre</button></p>
+  <div class="options__container">
+    <div class="sidenav__buttons">
+      <button mat-button mat-raised-button color="warn" (click)="sidenav.toggle()">Inchide</button>
+      <button mat-button mat-raised-button color="accent" (click)="resetFilters()">Reseteaza Filtre</button>
+    </div>
   <h4>Anunturi pe pagina</h4>
   <mat-select [(value)]="userService.itemsOnPage" class="numar__anunturi">
     <mat-option *ngFor="let option of userService.itemsPerPageOptions" [value]="option">{{ option }}</mat-option>
   </mat-select>
-  <mat-radio-group [(ngModel)]="userService.adItemType">
+  <mat-radio-group [(ngModel)]="userService.adItemType" class="adItemType__options">
     <mat-radio-button value="Casa">Casa</mat-radio-button>
     <mat-radio-button value="Apartament">Apartament</mat-radio-button>
     <mat-radio-button value='Toate'>Toate</mat-radio-button>
   </mat-radio-group>
-  <br>
-  <mat-checkbox [(ngModel)]="userService.saleCheckbox">Vanzare</mat-checkbox>
-  <mat-checkbox [(ngModel)]="userService.rentCheckbox">Inchiriere</mat-checkbox>
-  <br>
-  <mat-form-field class="" appearance="outline">
-    <input type="number" matInput placeholder="Pret minim..." [(ngModel)]="userService.priceMin" autocomplete="off">
-    <mat-icon matSuffix>euro_symbol</mat-icon>
-  </mat-form-field>
-  <mat-form-field class="form__field__input" appearance="outline">
-    <input type="number" matInput placeholder="Pret maxim..." [(ngModel)]="userService.priceMax" autocomplete="off">
-    <mat-icon matSuffix>euro_symbol</mat-icon>
-  </mat-form-field>
-  <mat-form-field>
-    <input type="number" placeholder="Suprafata Minima..." matInput [(ngModel)]="userService.surfaceMin" autocomplete="off">
-  </mat-form-field>
-  <mat-form-field>
-    <input type="number" placeholder="Suprafata Maxima..." matInput [(ngModel)]="userService.surfaceMax" autocomplete="off">
-  </mat-form-field>
-  <mat-form-field>
-    <input type="number" placeholder="Numar minim de camere..." matInput [(ngModel)]="userService.roomsMin" autocomplete="off">
-  </mat-form-field>
-  <mat-form-field>
-    <input type="number" placeholder="Numar maxim de camere..." matInput [(ngModel)]="userService.roomsMax" autocomplete="off">
-  </mat-form-field>
-  <mat-form-field>
+  <div class="form__options">
+    <mat-form-field class="" appearance="outline">
+      <input type="number" matInput placeholder="Pret minim..." [(ngModel)]="userService.priceMin" autocomplete="off">
+      <mat-icon matSuffix>euro_symbol</mat-icon>
+    </mat-form-field>
+    <mat-form-field class="form__field__input" appearance="outline">
+      <input type="number" matInput placeholder="Pret maxim..." [(ngModel)]="userService.priceMax" autocomplete="off">
+      <mat-icon matSuffix>euro_symbol</mat-icon>
+    </mat-form-field>
+  </div>
+  <div class="checkbox__options">
+    <mat-checkbox [(ngModel)]="userService.saleCheckbox">Vanzare</mat-checkbox>
+    <mat-checkbox [(ngModel)]="userService.rentCheckbox">Inchiriere</mat-checkbox>
+  </div>
+  <div class="form__options">
+    <mat-form-field>
+      <input type="number" placeholder="Suprafata Minima..." matInput [(ngModel)]="userService.surfaceMin" autocomplete="off">
+    </mat-form-field>
+    <mat-form-field>
+      <input type="number" placeholder="Suprafata Maxima..." matInput [(ngModel)]="userService.surfaceMax" autocomplete="off">
+    </mat-form-field>
+  </div>
+  <div class="form__options">
+    <mat-form-field>
+      <input type="number" placeholder="Numar minim de camere..." matInput [(ngModel)]="userService.roomsMin" autocomplete="off">
+    </mat-form-field>
+    <mat-form-field>
+      <input type="number" placeholder="Numar maxim de camere..." matInput [(ngModel)]="userService.roomsMax" autocomplete="off">
+    </mat-form-field>
+  </div>
+  <div class="form__options">
+    <mat-form-field>
+      <input type="number" matInput placeholder="An constructie..." [(ngModel)]="userService.yearBuiltMin" autocomplete="off">
+    </mat-form-field>
+    <mat-form-field>
+      <input type="number" matInput placeholder="An constructie..." [(ngModel)]="userService.yearBuiltMax" autocomplete="off">
+    </mat-form-field>
+  </div>
+  <mat-form-field class="furnished">
     <mat-select placeholder="Tip locuinta..." [(value)]="userService.furnished">
       <mat-option value="Mobilata">Mobilata</mat-option>
       <mat-option value="Mobilata Partial">Mobilata Partial</mat-option>
       <mat-option value="Nemobilata">Nemobilata</mat-option>
     </mat-select>
   </mat-form-field>
-  <mat-form-field>
-    <input type="number" matInput placeholder="An constructie..." [(ngModel)]="userService.yearBuiltMin" autocomplete="off">
-  </mat-form-field>
-  <mat-form-field>
-    <input type="number" matInput placeholder="An constructie..." [(ngModel)]="userService.yearBuiltMax" autocomplete="off">
-  </mat-form-field>
   <div *ngIf="userService.adItemType === 'Apartament'">
-    <mat-form-field>
-      <input type="number" placeholder="Confort..." matInput [(ngModel)]="userService.comfort" autocomplete="off">
-    </mat-form-field>
-    <mat-form-field>
-      <input type="text" pattern="(^Parter$)|(^Demisol$)|(^[0-9]{1,3}$)"  placeholder="Etaj minim..." matInput [(ngModel)]="userService.floorLevelMin" autocomplete="off">
-    </mat-form-field>
-    <mat-form-field>
-      <input type="text" pattern="(^Parter$)|(^Demisol$)|(^[0-9]{1,3}$)"  placeholder="Etaj maxim..." matInput [(ngModel)]="userService.floorLevelMax" autocomplete="off">
-    </mat-form-field>
-    <mat-form-field>
-      <mat-select placeholder="Compartimentare..." [(value)]="userService.partitioning">
-        <mat-option value="Decomandat">Decomandat</mat-option>
-        <mat-option value="Semidecomandat">Semidecomandata</mat-option>
-        <mat-option value="Necomandat">Necomandata</mat-option>
-        <mat-option value="Vagon">Vagon</mat-option>
-        <mat-option value="Circular">Circular</mat-option>
-      </mat-select>
-    </mat-form-field>
+    <div class="form__options">
+      <mat-form-field>
+        <input type="text" pattern="(^Parter$)|(^Demisol$)|(^[0-9]{1,3}$)"  placeholder="Etaj minim..." matInput [(ngModel)]="userService.floorLevelMin" autocomplete="off">
+      </mat-form-field>
+      <mat-form-field>
+        <input type="text" pattern="(^Parter$)|(^Demisol$)|(^[0-9]{1,3}$)"  placeholder="Etaj maxim..." matInput [(ngModel)]="userService.floorLevelMax" autocomplete="off">
+      </mat-form-field>
+    </div>
+    <div class="form__options">
+      <mat-form-field>
+        <input type="number" placeholder="Confort..." matInput [(ngModel)]="userService.comfort" autocomplete="off">
+      </mat-form-field>
+      <mat-form-field>
+        <mat-select placeholder="Compartimentare..." [(value)]="userService.partitioning">
+          <mat-option value="Decomandat">Decomandat</mat-option>
+          <mat-option value="Semidecomandat">Semidecomandat</mat-option>
+          <mat-option value="Necomandat">Necomandat</mat-option>
+          <mat-option value="Vagon">Vagon</mat-option>
+          <mat-option value="Circular">Circular</mat-option>
+        </mat-select>
+      </mat-form-field>
+    </div>
   </div>
   <div *ngIf="userService.adItemType === 'Casa'">
-    <mat-form-field>
-      <input type="number" placeholder="Suprafata utila minim..." matInput [(ngModel)]="userService.areaSurfaceMin" autocomplete="off">
-    </mat-form-field>
-    <mat-form-field>
-      <input type="number" placeholder="Suprafata utila maxim..." matInput [(ngModel)]="userService.areaSurfaceMax" autocomplete="off">
-    </mat-form-field>
+    <div class="form__options">
+      <mat-form-field>
+        <input type="number" placeholder="Suprafata utila minim..." matInput [(ngModel)]="userService.areaSurfaceMin" autocomplete="off">
+      </mat-form-field>
+      <mat-form-field>
+        <input type="number" placeholder="Suprafata utila maxim..." matInput [(ngModel)]="userService.areaSurfaceMax" autocomplete="off">
+      </mat-form-field>
+    </div>
   </div>
-  <div>
+  <div class="location__search__field">
     <form [formGroup]="userService.searchLocation">
       <div class="form-group search__location">
         <input placeholder="Localizare..." autocorrect="on" autocapitalize="on" spellcheck="on" type="text" class="form-control" #search formControlName="searchControl">
       </div>
     </form>
+  </div>
   </div>
 </mat-sidenav>
 <mat-sidenav-content>
