--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -30,9 +30,10 @@
           </mat-card-header>
           <mat-card-content>
             <p>Pret: {{ ad.price }} <span class="fa fa-euro"></span></p>
-            <p>{{ad.location}}</p>
+            <p>An Construc&#539;ie: {{ad.yearBuilt}}</p>
           </mat-card-content>
           <img mat-card-image height="300px"  [src]="ad.image">
+          <p>Loca&#539;ie: {{ad.location}}</p>
           <mat-card-actions class="viewAddButton">
             <button mat-raised-button mat-button color="primary" (click)="viewAdDetails(ad)">Vizualizeaza Anunt</button>
             <button *ngIf="userService.currentUser.type === 'ADMIN'"
